# practical-level-prediction

./: .cspell.json  .flake8  .gitignore  .sqlfluff  AGENTS.md  README.md
.github/: pull_request_template.md
.github/workflows/: deploy.yaml
dataform/: .gitignore  .sqlfluff  .sqlfluffignore  AGENTS.md  README.md  workflow_settings.yaml
dataform/definitions/: common_features.sqlx  engineer_features.sqlx  evaluate_model.sqlx  explain_predictions.sqlx  level_weights.sqlx  service_features.sqlx  service_mapping.sqlx  train_model.sqlx
dataform/definitions/sources/: certification_levels.sqlx  github_metrics.sqlx  google_cloud_certifications.sqlx  google_cloud_services.sqlx  resumes.sqlx  service_master.sqlx  skill_check_results.sqlx  tech_blog_master.sqlx  tech_blog_metrics.sqlx  user_certifications.sqlx
dataform/definitions/tests/: test_engineer_features.sqlx  test_service_features.sqlx
definitions/: AGENTS.md  README.md  common_features.sqlx  common_pipeline_end.sqlx  common_pipeline_start.sqlx  explain_predictions.sqlx  service_features.sqlx  service_pipeline_end.sqlx  service_pipeline_start.sqlx
definitions/assertions/: assert_certification_levels.sqlx  assert_github_metrics.sqlx  assert_google_cloud_certifications.sqlx  assert_google_cloud_certifications_match_scraping.sqlx  assert_google_cloud_services.sqlx  assert_resumes.sqlx  assert_service_master.sqlx  assert_skill_check_results.sqlx  assert_tech_blog_master.sqlx  assert_tech_blog_metrics.sqlx  assert_user_certifications.sqlx
definitions/sources/: certification_levels.sqlx  github_metrics.sqlx  google_cloud_certifications.sqlx  service_master.sqlx  skill_check_results.sqlx  tech_blog_metrics.sqlx  user_certifications.sqlx
definitions/tests/: test_engineer_features.sqlx
functions/: .gitignore  AGENTS.md  README.md
functions/export-prediction/: main.py  pyproject.toml  test_main.py
functions/import-skill-check/: README.md  main.py  pyproject.toml  test_main.py
functions/import-skill-check/schemas/: service_master.json  skill_check_results.json
functions/scrape-gcp-certifications/: Dockerfile  README.md  main.py  pyproject.toml  test_main.py
functions/send-slack-notification/: README.md  main.py  pyproject.toml  test_main.py
samples/: README.md  sample_skill_check.xlsx  targets_1.csv
terraform/: AGENTS.md  README.md  bigquery.tf  dataform.tf  functions.tf  gcs.tf  iam.tf  main.tf  outputs.tf  providers.tf  variables.tf
