[project]
name = "import-skill-check"
version = "0.1.0"
description = "Import skill check Excel to BigQuery"
requires-python = ">=3.14"
dependencies = [
    "functions-framework==3.10.1",
    "pandas==3.0.3",
    "openpyxl==3.1.5",
    "google-cloud-bigquery==3.41.0",
    "google-cloud-storage==3.12.0",
    "db-dtypes==1.7.0",
    "fsspec==2026.4.0",
    "gcsfs==2026.4.0"
]

[dependency-groups]
dev = [
    "black==26.5.1",
    "flake8==7.3.0",
    "pytest==9.1.0",
]
