[project]
name = "import-skill-check"
version = "0.1.0"
description = "Import skill check Excel to BigQuery"
requires-python = ">=3.14"
dependencies = [
    "functions-framework==3.10.1",
    "pandas==3.0.3",
    "openpyxl==3.1.5",
    "google-cloud-bigquery==3.41.0",
    "google-cloud-storage==3.12.0",
    "db-dtypes==1.7.0",
    "fsspec==2026.4.0",
    "gcsfs==2026.4.0"
]

[dependency-groups]
dev = [
    "black==26.5.1",
    "flake8==7.3.0",
    "pytest==9.1.0",
    "mypy==1.14.1",
    "radon==6.0.1",
    "isort==8.0.1",
]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "google.*",
    "google.cloud.*",
    "functions_framework.*",
    "cloudevents.*",
    "openpyxl.*",
    "pandas.*"
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "test_main"
ignore_errors = true


