[project]
name = "scrape-gcp-certifications"
version = "0.1.0"
description = "Cloud Run Service to scrape Google Cloud certifications list using Playwright"
requires-python = ">=3.14"
dependencies = [
    "fastapi==0.138.0",
    "uvicorn==0.49.0",
    "playwright==1.60.0",
    "greenlet==3.5.2",
]

[dependency-groups]
dev = [
    "black==26.5.1",
    "flake8==7.3.0",
    "pytest==9.1.0",
    "mypy==1.14.1",
    "radon==6.0.1",
    "isort==8.0.1",
    "httpx==0.28.1",
]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "functions_framework.*",
    "playwright.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "test_main"
ignore_errors = true
